<resources>
    <string name="app_name" translatable="false">PécsLines</string>

    <string name="Ok" translatable="false">OK</string>
    <string name="Gps" translatable="false">Gps</string>
    <string name="BottomSheetTitle_Incoming">Arriving buses:</string>
    <string name="LoadingText">Loading…</string>
    <string name="GPSHint">Failed to determine your position with GPS</string>
    <string name="EmptyList">There will be no service from this stop in the near future.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="GPSLoad">Request GPS position…</string>
    <string name="BusInStop">At stop</string>
    <string name="Schedule">Schedule</string>
    <string name="EmptySchedule">There is no service in this direction or to this stop on this day.</string>
    <string name="OfflineDataWarning">Offline data. For live data please connect to the internet!</string>
    <string name="TrackTimeString">%1$s (%2$d minutes)</string>
    <string name="Legend">Legend:</string>
    <string name="SoloBus">non-articulated</string>
    <string name="ArticulatedBus">articulated</string>
    <string name="MidiBus">midi</string>
    <string name="Error">Error</string>
    <string name="FirstLaunchInternetError">You need an internet connection to start the application for the first time.</string>
    <string name="DatabaseUpdateError">The updating of the database was UNSUCCESSFUL.</string>
    <string name="Search">Search</string>
    <string name="FavoriteButton">Favourites button</string>
    <string name="FavoriteText">Favourites:</string>
    <string name="SumText">All:</string>
    <string name="TrackBusStopSelect">%1$s. stop</string>
    <string name="NearStopLocationText" translatable="false">%1$f, %2$f</string>
    <string name="BusDoorNumberText">%1$d doors</string>
    <string name="TrackBusStopNameWithListNum" translatable="false">%1$d - %2$s</string>
    <string name="DelayStringWithPosSign">%1$s%2$d minutes</string>
    <string name="ScheduleButton">Schedule for this stop</string>
    <string name="NearStops">Nearby stops:</string>
    <string name="LowFloorIndicator">Low-floor</string>
    <string name="ElectricBusIndicator">Electric</string>
    <string name="AirConditionIndicator">Air conditioning</string>
    <string name="WifiOnBusIndicator">Wifi</string>
    <string name="UsbOnBusIndicator">USB charging</string>
    <string name="HourText">Hour:</string>
    <string name="MinuteText">Minute:</string>
    <string name="SwitchDirectionButton">Change direction</string>
    <string name="StopSelectorButton">Stop select button</string>
    <string name="NearStopIcon">Nearby stop</string>
    <string name="NearStopFavIcon">This stop is marked as favourite</string>
    <string name="ScheduleMinuteButton">Schedule minute button</string>
    <string name="SearchStopResultIcon">Search stop result</string>
    <string name="BusPositionIcon">Bus position icon</string>
    <string name="BusText">Line %1$s</string>
    <string name="DatabaseVersionCheckFail">Checking the updates was unsuccessful.</string>
    <string name="NewDatabaseWarning">Updated to new timetable! Changes may occur.</string>
    <string name="Brackets" translatable="false">(%1$s)</string>
    <string name="SelectDate">Select date:</string>
    <string name="SelectTime">Select time:</string>
    <string name="StartingDataFromStop">Departures from: %1$s (%2$s)</string>
    <string name="StartingDataFromStartingPosition">Departures from the starting:</string>
    <string name="BusStopNameWithNum" translatable="false">%1$s (%2$s)</string>
    <string name="AboutText">Email: pecslines@gmail.com\n\nPécsLines is a non official bus timetable application for Pécs, which provides real-time information about the local public transport.\nMain features:\n- Virtual bus stop board with real-time data\n- Line timetables\n- Interactive, map based user interface\n- Display current bus positions\n- Information about buses (type, low floor, climate, etc.)\n\n- Automatic selection of stops based on GPS position\n- Possibility to set favourite stops and routes\n\nThis application is part of an individual open source development project, not commissioned by Tüke Busz Zrt.\n\nYour questions and comments are welcome at pecslines@gmail.com.\n\nWe wish you a pleasant journey!\n\nGit: https://github.com/krisz768/BetterTuke\n\nIllustrations:\n- Image by rawpixel.com on Freepik\n- Image by storyset on Freepik\n- Image by storyset on Freepik\n- Image by rawpixel.com on Freepik\n- Image by vectorjuice on Freepik</string>
    <string name="TrackTimeStringOneMinute">%1$s (%2$d minute)</string>
    <string name="DelayStringWithPosSignOneMinute">%1$s%2$d minute</string>
    <string name="AllLines">All lines</string>
    <string name="DatabaseNotContain">The database does not contain data for this date.</string>
    <string name="IncBusAnotherDay" translatable="false">%1$s</string>
    <string name="DatabaseError">Error: this busline is not included in the database.</string>
    <string name="DelayStringWithSec">&#160;%1$d seconds, %2$d km/h</string>
    <string name="DelayStringWithSecOneSecond">&#160;%1$d second, %2$d km/h</string>
    <string name="TrackOldDataWarm">Outdated information</string>
    <string name="AllStopButton">All</string>
    <string name="DisableAdMenu">Disable ads</string>
    <string name="AboutUsMenu">About</string>
    <string name="SaveWarningTitle">Warning</string>
    <string name="SaveWarningText">You need to restart the application for the change to take effect.</string>
    <string name="OnBoardWelcomeTitle">Welcome to PécsLines!</string>
    <string name="OnBoardWelcomeDesc">Pécs unofficial timetable application.</string>
    <string name="BusIllustrationImageDesc">Bus illustration</string>
    <string name="OnBoardSecTitle">The first step is to download the database!</string>
    <string name="OnBoardSecDesc">This may take a few seconds.</string>
    <string name="DownloadIllustration">Download illustration</string>
    <string name="OnBoardFinTitle">Everything is ready!</string>
    <string name="OnBoardFinDesc">Have a safe journey!</string>
    <string name="FinishIllustration">Finish illustration</string>
    <string name="OnBoardUpdateTitle">Database update in progress!</string>
    <string name="OnBoardUpdateDesc">Please wait...</string>
    <string name="DisableAdText">If you like the app and want to support it, please turn on the ads. Thank you!</string>
    <string name="DisableAdIllustration">Disable ad illustration</string>
    <string name="SaveAdButton">Save</string>
    <string name="AdEnableSwitch">Enable advertisements</string>
    <string name="OnBoardNextButtonDesc">Next button</string>
    <string name="OnBoardPrevButtonDesc">Previous button</string>
    <string name="PrivacyButton">Privacy options</string>
    <string name="PrivacySettingsNotAvailable">Not available</string>
    <string name="UpdateReadyToInstall">An update has just been downloaded.</string>
    <string name="UpdateReadyToInstallButton">INSTALL</string>
    <string name="StopShortcutIcon">Stop</string>
    <string name="BusShortcutIcon">Bus line</string>
    <string name="ActiveBuses">Active buses</string>
    <string name="InternetError">Please connect to the internet.</string>
    <string name="BusTypeIcon">Bus type icon</string>
    <string name="BusTypeRec" translatable="false">%1$s (%2$d)</string>
    <string name="NearBuses">Nearby buses:</string>
    <string name="SwitchBusActivityTitle">Transfer options:</string>
    <string name="SwitchTimeString">%1$s (%2$s minutes)</string>
    <string name="SwitchTimeStringOneMinute">%1$s (%2$s minute)</string>
    <string name="BusLeftStop">The bus left the stop.</string>
</resources>