<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateAndOnBoardScreen.FirstOnBoard">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/adflow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="90dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="imageView,textView7"
        app:flow_horizontalAlign="center"
        app:flow_horizontalGap="30dp"
        app:flow_verticalAlign="center"
        app:flow_verticalGap="16dp"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="326dp"
        android:layout_height="381dp"
        android:contentDescription="@string/DisableAdIllustration"
        android:src="@drawable/no_ad_illustration"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="259dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:breakStrategy="balanced"
        android:text="@string/DisableAdText" />

    <Switch
        android:id="@+id/AdSwitch"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="44dp"
        android:text="@string/AdEnableSwitch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SaveButton"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:text="@string/SaveAdButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/AdSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>