<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivityViewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/MainFlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="adView,search_bar"
        app:flow_horizontalGap="13dp"
        app:flow_maxElementsWrap="1"
        app:flow_verticalGap="13dp"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="3dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView"
        tools:layout="@layout/fragment_loading" />

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Search"
        android:hint="@string/Search"
        app:menu="@menu/main_activity_menu"
        tools:layout_editor_absoluteX="593dp"
        tools:layout_editor_absoluteY="50dp">

    </com.google.android.material.search.SearchBar>

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp"
        android:hint="@string/Search">
        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/SearchViewFragmentContainer"
            android:name="hu.krisz768.bettertuke.LoadingFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_loading" />
    </com.google.android.material.search.SearchView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ShowScheduleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/Schedule"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/bus" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/PosButton"
        style="?attr/floatingActionButtonSurfaceStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:contentDescription="@string/Gps"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/ShowScheduleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/gps" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="6dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <FrameLayout
            android:id="@+id/standard_bottom_sheet"
            style="@style/Widget.Material3.BottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView2"
                android:name="hu.krisz768.bettertuke.LoadingFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout="@layout/fragment_loading" />

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>